--- a/public/index.html
+++ b/public/index.html
@@ -9,10 +9,10 @@
 
     <meta property="og:title" content="æternity Token Migration">
     <meta property="og:site_name" content="æternity Token Migration">
-    <meta property="og:url" content="<%= BASE_URL %>">
+    <meta property="og:url" content="https://migrate.aeternity.com/">
     <meta property="og:description" content="Tool to migrate AE ERC-20 tokens from the Ethereum Blockchain to the æternity Mainnet.">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="<%= BASE_URL %>token-migration-open-graph.png">
+    <meta property="og:image" content="https://migrate.aeternity.com/token-migration-open-graph.png">
 
     <link rel="apple-touch-icon" sizes="180x180" href="<%= BASE_URL %>apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="<%= BASE_URL %>favicon-32x32.png">
